--- a/index.html
+++ b/index.html
@@ -35,9 +35,18 @@
 		</div>
 	</div>
 	<div class="second-row">
-		<div class="container custom-container">
+		<div class="for-responsive-only click">
+			<div class="custom-container">
+				<div class="menu-button">
+					<div></div>
+					<div></div>
+					<div></div>
+				</div>
+			</div>
+		</div>
+		<div class="container showhide custom-container">
 			<div class="row  justify-center align-center">
-				<ul CLASS="navbar flex-row">
+				<ul CLASS="responsive-column navbar flex-row">
 					<li><span>PRODUCTS</span></li>
 					<li><span>RESEARCH</span></li>
 					<li><span>RESOURCES</span></li>
@@ -251,8 +260,8 @@
 		<div class="container">
 			<div class="container">
 				<div class="container">
-					<div class="row mt-5">
-						<div class="offset-2 col-2 mt-5">
+					<div class=" responsive-flex row mt-5">
+						<div class="offset-2 responsive-no-off all-width col-2 mt-5">
 							<div class="redcolor"><p class="make-bold"><strong>Websites</strong></p></div>
 							<div class="footer-menu">
 								<div><p>companion</p></div>
@@ -261,7 +270,7 @@
 								<div><p>Corporate</p></div>
 							</div>
 						</div>
-						<div class="col-2 mt-5">
+						<div class="col-2 all-width mt-5">
 							<div class="redcolor"><p class="make-bold"><strong>LiteCure</strong></p></div>
 							<div class="footer-menu">
 								<div><p>About US</p></div>
@@ -272,7 +281,7 @@
 								<div><p>Careers</p></div>
 							</div>
 						</div>
-						<div class="col-md-3 mt-5">
+						<div class="col-md-3 all-width mt-5">
 							<div class="redcolor"><p class="make-bold"><strong>Facebook</strong></p></div>
 
 							<div class="footer-menu">
@@ -285,7 +294,7 @@
 							</div>
 
 						</div>
-						<div class="col-2 mt-5">
+						<div class="col-2 social-icons mt-5">
 							<i class="fa fa-linkedin-square redcolor socialicons socialicons1" ></i>
 							<i class="fa fa-twitter redcolor socialicons socialicons1"></i>
 							<i class="fa fa-envelope redcolor  socialicons socialicons1" ></i>
@@ -323,6 +332,7 @@
  	<script src="js/jquery.min.js"></script>
     <script src="js/tether.min.js"></script>
     <script src="js/bootstrap.min.js"></script> 
+    <script src="js/main.js"></script>
 </body>
 
 </html>
