--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Premier PT Lander - Premier Physical Therapy - Zeplin</title>
+	<title>Pegasus demo</title>
 <link rel="stylesheet" type="text/css" href="css/main.css">
  <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
