--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
 <section class="section-three">
 
 
-		<div id="myCarousel1" class="carousel slide" data-ride="">
+		<div id="myCarousel" class="carousel slide" data-ride="2000">
 			<!-- Indicators -->
 			<ol class="carousel-indicators carouselinicator">
-				<li data-target="#myCarousel1"  data-slide-to="0" class="active"></li>
-				<li data-target="#myCarousel1" data-slide-to="1"></li>
-				<li data-target="#myCarousel1" data-slide-to="2"></li>
+				<li data-target="#myCarousel"  data-slide-to="0" class="active"></li>
+				<li data-target="#myCarousel" data-slide-to="1"></li>
+				<li data-target="#myCarousel" data-slide-to="2"></li>
 
 			</ol>
 			<!-- Wrapper for slides -->
@@ -197,7 +197,9 @@
 						</div>
 					</div>
 				</div>
+
 			</div>
+
 		</div>
 	</div>
 </section>
@@ -214,7 +216,7 @@
 			<div class="taketheflowbro">
 				<p>
 					See what makes Pegasus equine lasers different from anything else
-					on the market today. Schedule a demo at your offices, or come pay us a visit.
+					on the market today.<br/> Schedule a demo at your offices, or come pay us a visit.
 					Either way, we know you'll like what you see.
 				</p>
 			</div>
@@ -248,12 +250,12 @@
 	</div>
 </section>
 <section class="section-six">
-	<footer class="footer  ">
-		<div class="container">
+	<footer class="footer   ">
+		<div class="container give-bottom">
 			<div class="container">
 				<div class="container">
 					<div class=" responsive-flex row mt-5">
-						<div class="offset-2 responsive-no-off all-width col-2 mt-5">
+						<div class=" responsive-no-off all-width col-2 mt-5">
 							<div class="redcolor"><p class="make-bold"><strong>Websites</strong></p></div>
 							<div class="footer-menu">
 								<div><p>companion</p></div>
@@ -297,7 +299,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="container custom-container">
+		<div class="container give-bottom custom-container">
 			<div class="row mt-6 pb-5  footer-menu-last">
 				<div class="col-12 custom-flex-footer">
 					<div class="give-amazing-margin"><p>Copyright  © 2018 LiteCure, LLC. All rights reserved.</p> </div>
@@ -308,12 +310,6 @@
 					</div>
 				</div>
 
-					<!--<div class=" col-4   negative-margin"><p>Copyright  © 2018 LiteCure, LLC. All rights reserved.</p></div>-->
-
-
-					<!--<div class=" offset-3 no-padding margin-left-special col-md-1 text-right "> <p>Legal</p></div>-->
-					<!--<div class="col-md-2 no-padding flex text-right pr-2"> <p>Terms of  Use</p></div>-->
-					<!--<div class="col-md-2 text-right no-padding negative-margin-right "><p>Privacy Policy</p></div>-->
 
 			</div>
 		</div>
