--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 		</div>
 	</div>
 	<div class="second-row">
-		<div class="for-responsive-only click">
+		<div class="for-responsive-only">
 			<div class="custom-container">
-				<div class="menu-button">
+				<div class="menu-button  click">
 					<div></div>
 					<div></div>
 					<div></div>
